<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ff267cef"
    android:clickable="false">

    <EditText
        android:textSize="20sp"
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint3"
        android:ems="10"
        android:background="#ffffffff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:gravity="center_vertical|center_horizontal"
        android:imeOptions="actionNext"
        android:inputType="numberPassword">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button"
        android:text="@string/enter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/greybutton"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/button1"
        android:text="@string/access"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/greybutton"
        android:layout_marginTop="140dp"
        android:layout_below="@+id/username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>